--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "build": "npx tsc",
     "clean": "rm -rf lib coverage",
     "lint": "npx tslint --project . --format verbose",
-    "prepublishOnly": "npm run clean && npm run build && npm run lint && npm run test",
-    "test": "jest --coverage",
+    "predev": "npm i ../yeanay-commons",
+    "remotify": "npm un @yeanay/yeanay-commons && npm i @yeanay/yeanay-commons",
+    "prepublishOnly": "npm run remotify && npm run clean && npm run build && npm run lint && npm run test",
+    "test": "npx jest --coverage",
     "debug-jest": "node --inspect-brk node_modules/.bin/jest --runInBand"
   },
   "jest": {
@@ -30,15 +32,18 @@
   "devDependencies": {
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
+    "config": "^3.0.1",
     "jest": "^23.6.0",
+    "json5": "^2.1.0",
     "ts-jest": "^23.10.5",
     "tslint": "^5.12.0",
     "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "^3.2.2"
   },
   "dependencies": {
-    "@yeanay/yeanay-commons": "^0.1.4",
+    "@yeanay/yeanay-commons": "^0.1.6",
     "knex": "^0.16.3",
+    "pg": "^7.7.1",
     "remeda": "^0.0.7"
   }
 }
