--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,9 @@ node_js:
 env:
   - YEANAY_TEST_DB="host=localhost port=5432 user=postgres dbname=yeanay_test"
 script: "npm run prepublishOnly"
-services:
-  - postgresql
+#services:
+#  - postgresql
+addons:
+  postgresql: "9.6"
 before_script:
   - psql -c 'create database yeanay_test;' -U postgres
